basic footer added, little fix on z-index example && little changes on Objetos.js

--- a/html_basico/assets/styles/style.css
+++ b/html_basico/assets/styles/style.css
@@ -75,6 +75,7 @@ h1, h2, h3, h4 {
 
 .TablaTrainees caption {
 
+    font-weight: bold;
     color: #005CBF;
     font-size: 25px;
     margin-bottom: 10px;
@@ -138,6 +139,13 @@ nav {
     justify-content: space-around;
 }
 
+.e-index {
+
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
 .logo {
     margin-left: auto;
     margin-right: auto;
@@ -152,8 +160,8 @@ nav {
 .cuadrado-azul {
 
     position: static;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background-color: #226cbbce;
 
 }
@@ -161,22 +169,22 @@ nav {
 .cuadrado-verde {
 
     position: absolute;
-    top: 950px;
-    left: 370px;
+    top: 930px;
+    left: 365px;
     z-index: -1;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background-color: #2bca6bd2;
 }
 
 .cuadrado-rojo {
 
     position: absolute;
-    top: 950px;
-    left: 150px;
+    top: 930px;
+    left: 242px;
     z-index: -2;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background-color: #ce3737c0;
 
 }
@@ -184,10 +192,10 @@ nav {
 .cuadrado-violeta {
 
     position: absolute;
-    top: 1050px;
+    top: 996px;
     z-index: 1;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background-color: #830bd8b7;
 
 }
@@ -466,3 +474,24 @@ nav {
 
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+/* FOOTER */
+
+.contenedor-footer {
+    font-family: "Righteous", sans-serif;
+    margin-top: 40px;
+    border-top: 2px solid rgb(184, 184, 184);
+    background-color: #226cbb;
+
+}
+
+.contenedor-footer h1, .contenedor-footer h2{
+
+    color: white;
+    vertical-align:sub;
+
+}
+
+.contenedor-footer i {
+    margin: 0!important;
+}
